# cli-chat-app

./: .gitignore  CMakeLists.txt  run.sh  setup.sh
client/: CMakeLists.txt  NetworkManager.cpp  main.cpp  parse_input.cpp
client/include/: AppState.hpp  ClientCommands.hpp  NetworkManager.hpp
include/: AuthManager.hpp  BarrackManager.hpp  BarrackRepo.hpp  CassandraMessageRepo.hpp  ClientSession.hpp  ConcurrentQueue.hpp  ConnectionManager.hpp  Crypto.hpp  DatabaseConn.hpp  DatabaseManager.hpp  Error.hpp  EventRepository.hpp  Listener.hpp  MessageDispatcher.hpp  MessageRepo.hpp  Messages.hpp  OutboxRelay.hpp  Room.hpp  UserRepo.hpp  types.hpp
src/: AuthManager.cpp  AuthManager.hpp  BarrackManager.cpp  BarrackManager.hpp  BarrackRepo.cpp  CassandraMessageRepo.cpp  ClientSession.cpp  ClientSession.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Crypto.cpp  DatabaseConn.cpp  DatabaseManager.cpp  EventRepository.cpp  Listener.cpp  MessageDispatcher.cpp  MessageManager.cpp  MessageManager.hpp  MessageRepo.cpp  Messages.hpp  OutboxRelay.cpp  Room.cpp  UserRepo.cpp  main.cpp  net.cpp  net.hpp  test-client.cpp  types.hpp
src/commands/: AuthCommands.cpp  AuthCommands.hpp  BarrackCommands.cpp  BarrackCommands.hpp  CommandFactory.cpp  CommandFactory.hpp  ICommand.hpp
